Revert "Fix session grid overflow css"
This reverts commit 131c138788187332cf99dfc7fff837b305b47e4e.

--- a/app/assets/stylesheets/grid.css.scss
+++ b/app/assets/stylesheets/grid.css.scss
@@ -45,8 +45,6 @@
 	}
 	ul.sessionsList li {
 		padding-left: 0;
-    padding-right: 1em;
-    width: 100%;
 	}
 	.more_sessions {
 		padding-left: 0;
