--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -197,7 +197,8 @@ div.sidebar-box {
 
 ul.sessionsList {
   margin: 0;
-  padding: 0 2.2em 0 0;
+  padding: 0;
+  padding-right: 2.2em;
   list-style-type: none;
   @include columns(24em, 1em);
   li.attending {
@@ -207,6 +208,7 @@ ul.sessionsList {
     margin: 0.6em 0;
     padding-left: 2.2em;
     display: inline-block;  // prevent column break
+    width: 100%;
     a {
       &:link, &:visited {
         font: 700 1.2em / 1.2em;
